# cv

./: CMakeLists.txt  README.md  vcpkg.json
examples/: CMakeLists.txt  base.cpp
src/: cv.cpp  cv.h  validator.h
src/base/: base.h
src/common/: context.h  error.h  result.h  type.h
src/utils/: util.cpp  util.h
src/validator/: string_validator.h
